--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  background: var(--background);
+  background: #242424;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
