--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,8 @@
 }
 
 body {
-  background: #242424;
+  background: #120221;
+color: #ffffff;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
